[package]
name = "gl-lib-sdl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl_lib = { path = "../rust-gl-lib" }
deltatime = { git = "https://github.com/dixe/rust-deltatime" }
failure = "0.1"

[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]
