[package]
name = "gl_lib_sdl"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gl_lib = { git = "https://github.com/dixe/rust-gl-lib" }
gl_lib = { path = "../rust-gl-lib" }
deltatime = { git = "https://github.com/dixe/rust-deltatime" }
failure = "0.1"
num = "0.4.0"

[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]


[dev-dependencies]
rand = "0.8.4"